# origin

./: .gitignore  .gitleaks.toml  .gitleaksignore  CHANGELOG.md  CLAUDE.md  PLUGINS.md  README.md  SPEC.md  eslint.config.js  index.html  note.plugins.json  origin.plugins.json  package-lock.json  package.json  prompt.md  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
docs/: GOALS.md  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/plugins/_placeholder/: README
src-tauri/assets/plugins/com.origin.browser/: index.html  manifest.json
src-tauri/assets/plugins/com.origin.browser/assets/: index-jSYU8Gyt.js
src-tauri/assets/plugins/com.origin.filetree/: index.html  manifest.json
src-tauri/assets/plugins/com.origin.filetree/assets/: index-BgGG_aPj.js  index-Q_gH4mMO.js
src-tauri/assets/plugins/com.origin.github/: index.html  manifest.json
src-tauri/assets/plugins/com.origin.github/assets/: index-BRhDDMS3.js
src-tauri/assets/plugins/com.origin.hello/: index.html  manifest.json
src-tauri/assets/plugins/com.origin.hello/assets/: index-BFjbiy6V.js
src-tauri/assets/plugins/com.origin.monaco/: index.html  manifest.json
src-tauri/assets/plugins/com.origin.monaco/assets/: abap-DLDM7-KI.js  apex-DNDY2TF8.js  azcli-Y6nb8tq_.js  bat-BwHxbl9M.js  bicep-CFznDFnq.js  cameligo-Bf6VGUru.js  clojure-Dnu-v4kV.js  coffee-Bd8akH9Z.js  cpp-BbWJElDN.js  csharp-Co3qMtFm.js  csp-D-4FJmMZ.js  css-DdJfP1eB.js  css.worker-DBVD8oXr.js  cssMode-CZ5HEOk1.js  cypher-cTPe9QuQ.js  dart-BOtBlQCF.js  dockerfile-BG73LgW2.js  ecl-BEgZUVRK.js  editor.worker-CdQrwHl8.js  elixir-BkW5O-1t.js  flow9-BeJ5waoc.js  freemarker2-BLHraPlw.js  fsharp-PahG7c26.js  go-acbASCJo.js  graphql-BxJiqAUM.js  handlebars-DYvSD5dS.js  hcl-DtV1sZF8.js  html-tqZvzU-J.js  html.worker-CwpTb9lJ.js  htmlMode-C8A7CW0T.js  index-B7laQ8Mn.js  ini-Kd9XrMLS.js  java-CXBNlu9o.js  javascript-BeknhVJc.js  json.worker-BoL8UZqY.js  jsonMode-DeDO82Vg.js  julia-cl7-CwDS.js  kotlin-s7OhZKlX.js  less-9HpZscsL.js  lexon-OrD6JF1K.js  (+53 more)
src-tauri/assets/plugins/com.origin.notepad/: index.html  manifest.json
src-tauri/assets/plugins/com.origin.notepad/assets/: index-BHvlVKLN.js
src-tauri/assets/plugins/com.origin.terminal/: index.html  manifest.json
src-tauri/assets/plugins/com.origin.terminal/assets/: index-CdMY6cwF.js  index-DFuMZ0ql.css
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  plugin_manager.rs  pty.rs
src-tauri/src/commands/: fs.rs  mod.rs  plugins.rs  updater.rs  window.rs
src-tauri/src/protocol/: plugin.rs
(+162 files in other folders)
