[package]
name = "origin"
version = "0.2.0"
description = "origin — dynamic dashboard + plugin API"
authors = []
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "origin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["process", "sync"] }
portable-pty = { version = "0.9", features = ["serde_support"] }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
tauri-plugin-zustand = { version = "1", features = ["file-sync-all"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
